Simplified script interface -- no longer requires separate keras package.